--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
     "google-map-react": "^2.2.1",
+    "history": "^5.3.0",
     "jquery": "^3.7.0",
+    "js-cookie": "^3.0.5",
     "rc-time-picker": "^3.7.3",
     "rc-time-picker-24": "^2.0.6",
     "react": "^18.2.0",
